opam-version: "1.3"
maintainer: "Mauricio Fernández"
authors: [
  "Mr. Number"
  "Mike Wells"
  "Mauricio Fernández"
  "Brad Langel"
]
license: "BSD3"
homepage: "https://github.com/mfp/ocaml-statsd-client/"
dev-repo: "git://github.com/mfp/ocaml-statsd-client"
bug-reports: "https://github.com/mfp/ocaml-statsd-client/issues"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" {build}
  "async"
]

available: [ ocaml-version >= "4.04.1" ]