opam-version: "1.2"
maintainer: "Mike Wells"
authors: [
  "Mr. Number"
  "Mike Wells"
]
license: "BSD3"
homepage: "https://github.com/mfp/ocaml-statsd-client/"
dev-repo: "git://github.com/mfp/ocaml-statsd-client"
bug-reports: "https://github.com/mfp/ocaml-statsd-client/issues"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" {build}
  "lwt"
]

available: [ ocaml-version >= "4.04.2" ]